# taping-memory-blog

./: .gitignore  Cargo.toml  Procfile  README.md  app.json  package-lock.json  package.json  rollup.config.js  webpack.config.js
.github/: dependabot.yml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: about_me.rs  blog_displayer.rs  blog_preview_list.rs  lib.rs  list_displayer.rs  request_loader.rs  root.rs  routes.rs
client/static/: blog_style.css.orig  blog_style.scss  bootstrap.js  index.html  testfile.txt
client/static/articles/: 1_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_1).md  2_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_2).md  3_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_3).md  4_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_4).md  5_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_5).md
client/static/third-parties/bootstrap_scss/: _utilities.scss  bootstrap.scss
client/static/third-parties/fontello/: config.json  demo.html
client/static/third-parties/fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
client/static/third-parties/fontello/font/: fontello.eot
js_snippets/: set_marked_options.js
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: article_list.rs  constants.rs  lib.rs
src/: article_list.rs  blog_displayer.rs  blog_post.rs  blog_preview_list.rs  constants.rs  encoded.rs  lib.rs  list_displayer.rs  main.rs  request_loader.rs  root.rs  routes.rs  spinner.rs
src/blog_post/: model.rs
static/: blog_style.css  index.html
static/articles/: 1_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_1).md  1_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_2).md  1_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku.md  2_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_2).md  2_test3.md  3_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_3).md  4_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_4).md  4_test4.md  5_how_to_create_a_blog_with_yew(wasm)_rocket_and_deploy_it_to_heroku(part_5).md  5_test_name.md  test.md  test2.md
static/makrdown/: first_post.md
