[package]
name = "WebBlog"
version = "0.1.0"
authors = ["conectado <conectado2@protonmail.com>"]
edition = "2018"

[lib]
name = "web_blog_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
yew = "^0.17"
serde = "^1.0"
serde_derive = "^1.0"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
rocket = "^0.4"
http = "^0.2"
anyhow = "^1.0"
yew-router = "^0.14"

[dependencies.rocket_contrib]
version = "^0.4"
features = ["serve"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize", "nightly"]

[[bin]]
name = "server"

