[package]
name = "WebBlog"
version = "0.1.0"
authors = ["conectado <conectado2@protonmail.com>"]
edition = "2018"

[lib]
name = "taping_memory_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
yew = "^0.17"
serde = "^1.0"
serde_derive = "^1.0"
wasm-bindgen-futures = "^0.4"
http = "^0.2"
anyhow = "^1.0"
yew-router = "^0.14"
pulldown-cmark = "^0.7"
wee_alloc = "^0.4"

[dependencies.web-sys]
version = "*"
features = ["NodeList"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[[bin]]
name = "server"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
actix-files = "^0.2"
actix-http = "^1.0"
