[package]
name = "client"
version = "0.1.0"
authors = ["conectado <conectado2@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "^0.18"
wasm-bindgen-futures = "^0.4"
http = "^0.2"
anyhow = "^1.0"
yew-router = "^0.14"
pulldown-cmark = "^0.8"
wee_alloc = "^0.4"
shared = { path = "../shared" }

[dependencies.web-sys]
version = "*"
features = ["NodeList"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]
