[package]
name = "server"
version = "0.1.0"
authors = ["conectado <conectado2@protonmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0"
actix-rt = "1.1"
actix-files = "0.5"
actix-http = "2.0"
axum = "0.1"
tower-http = {version = "0.1", default-features = false, features = ["fs", "trace"]}
http = "0.2"
hyper = {version = "0.14", default-features = false, features = ["server", "http1", "http2", "tcp"]}
serde = {version = "^1.0", features = ["derive"]}
shared = { path = "../shared/" }
tokio = {version = "^1.0", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread"]}
tracing-subscriber = "0.2"
